# cpp_util

./: .gitmodules  CMakeLists.txt  README.md  vcpkg_list.txt
.github/workflows/: main.yml
include/cpp_util/command_buffer/: command_buffer.h
include/cpp_util/debug/: assert.h
include/cpp_util/event/: event.h  listener.h  observable.h
include/cpp_util/handle/: handle.h  handle_generator.h
include/cpp_util/log/: file_log.h  log_level.h  log_object.h  log_type.h  log_writer.h  logger.h  logger_base.h  memory_log.h  terminal_log.h
include/cpp_util/types/: automatic_singleton.h  bit_mask.h  memory.h  raw_type_to_id.h  singleton.h  type_to_id.h  value_to_id.h  variant_list.h  variant_map.h  variant_type.h  variant_type_helper.h
src/debug/: assert.cpp
src/handle/: handle.cpp  handle_generator.cpp
src/log/: file_log.cpp  log_level.cpp  log_object.cpp  log_writer.cpp  logger.cpp  logger_base.cpp  memory_log.cpp  terminal_log.cpp
src/types/: bit_mask.cpp  memory.cpp  type_to_id.cpp  value_to_id.cpp  variant_list.cpp  variant_type.cpp
test/: test_regex.cpp
test/command_buffer/: test_command_buffer.cpp
test/event/: test_event.cpp
test/log/: test_log_move.cpp  test_logger.cpp  test_memory_log.cpp
test/types/: test_memory.cpp  test_type_to_id.cpp  test_value_to_id.cpp  test_variant_list.cpp  test_variant_map.cpp  test_variant_type.cpp
